@@ -1,38 +1,164 @@
 package com.firebolt.jdbc.metadata;
 
+import com.firebolt.jdbc.GenericWrapper;
 import com.firebolt.jdbc.QueryResult;
-import com.firebolt.jdbc.annotation.ExcludeFromJacocoGeneratedReport;
-import com.firebolt.jdbc.annotation.NotImplemented;
 import com.firebolt.jdbc.connection.FireboltConnection;
 import com.firebolt.jdbc.resultset.FireboltResultSet;
 import com.firebolt.jdbc.resultset.column.Column;
 import com.firebolt.jdbc.type.FireboltDataType;
 import com.firebolt.jdbc.util.VersionUtil;
-import lombok.CustomLog;
-import org.apache.commons.lang3.StringUtils;
 
-import java.sql.*;
-import java.util.*;
+import java.sql.Connection;
+import java.sql.DatabaseMetaData;
+import java.sql.JDBCType;
+import java.sql.ResultSet;
+import java.sql.RowIdLifetime;
+import java.sql.SQLException;
+import java.sql.Statement;
+import java.sql.Types;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
 
-import static com.firebolt.jdbc.metadata.MetadataColumns.*;
-import static com.firebolt.jdbc.type.FireboltDataType.*;
+import static com.firebolt.jdbc.metadata.MetadataColumns.ASC_OR_DESC;
+import static com.firebolt.jdbc.metadata.MetadataColumns.ATTR_DEF;
+import static com.firebolt.jdbc.metadata.MetadataColumns.ATTR_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.ATTR_SIZE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.ATTR_TYPE_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.AUTO_INCREMENT;
+import static com.firebolt.jdbc.metadata.MetadataColumns.BASE_TYPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.BUFFER_LENGTH;
+import static com.firebolt.jdbc.metadata.MetadataColumns.CARDINALITY;
+import static com.firebolt.jdbc.metadata.MetadataColumns.CASE_SENSITIVE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.CHAR_OCTET_LENGTH;
+import static com.firebolt.jdbc.metadata.MetadataColumns.CLASS_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.COLUMN_DEF;
+import static com.firebolt.jdbc.metadata.MetadataColumns.COLUMN_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.COLUMN_SIZE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.COLUMN_TYPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.COLUMN_USAGE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.COMMON_RADIX;
+import static com.firebolt.jdbc.metadata.MetadataColumns.CREATE_PARAMS;
+import static com.firebolt.jdbc.metadata.MetadataColumns.DATA_TYPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.DECIMAL_DIGITS;
+import static com.firebolt.jdbc.metadata.MetadataColumns.DEFAULT_VALUE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.DEFERRABILITY;
+import static com.firebolt.jdbc.metadata.MetadataColumns.DELETE_RULE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.DESCRIPTION;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FILTER_CONDITION;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FIXED_PREC_SCALE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FKCOLUMN_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FKTABLE_CAT;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FKTABLE_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FKTABLE_SCHEM;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FK_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FUNCTION_CAT;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FUNCTION_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FUNCTION_SCHEM;
+import static com.firebolt.jdbc.metadata.MetadataColumns.FUNCTION_TYPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.GRANTEE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.GRANTOR;
+import static com.firebolt.jdbc.metadata.MetadataColumns.INDEX_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.INDEX_QUALIFIER;
+import static com.firebolt.jdbc.metadata.MetadataColumns.IS_AUTOINCREMENT;
+import static com.firebolt.jdbc.metadata.MetadataColumns.IS_GENERATEDCOLUMN;
+import static com.firebolt.jdbc.metadata.MetadataColumns.IS_GRANTABLE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.IS_NULLABLE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.KEY_SEQ;
+import static com.firebolt.jdbc.metadata.MetadataColumns.LENGTH;
+import static com.firebolt.jdbc.metadata.MetadataColumns.LITERAL_PREFIX;
+import static com.firebolt.jdbc.metadata.MetadataColumns.LITERAL_SUFFIX;
+import static com.firebolt.jdbc.metadata.MetadataColumns.LOCAL_TYPE_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.MAXIMUM_SCALE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.MAX_LEN;
+import static com.firebolt.jdbc.metadata.MetadataColumns.MINIMUM_SCALE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.NON_UNIQUE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.NULLABLE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.NUM_PREC_RADIX;
+import static com.firebolt.jdbc.metadata.MetadataColumns.ORDINAL_POSITION;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PAGES;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PKCOLUMN_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PKTABLE_CAT;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PKTABLE_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PKTABLE_SCHEM;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PK_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PRECISION;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PRIVILEGE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PROCEDURE_CAT;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PROCEDURE_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PROCEDURE_SCHEM;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PROCEDURE_TYPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.PSEUDO_COLUMN;
+import static com.firebolt.jdbc.metadata.MetadataColumns.RADIX;
+import static com.firebolt.jdbc.metadata.MetadataColumns.REF_GENERATION;
+import static com.firebolt.jdbc.metadata.MetadataColumns.REMARKS;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SCALE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SCOPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SCOPE_CATALOG;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SCOPE_SCHEMA;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SCOPE_TABLE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SEARCHABLE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SELF_REFERENCING_COL_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SOURCE_DATA_TYPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SPECIFIC_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SQL_DATA_TYPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SQL_DATETIME_SUB;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SUPERTABLE_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SUPERTYPE_CAT;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SUPERTYPE_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.SUPERTYPE_SCHEM;
+import static com.firebolt.jdbc.metadata.MetadataColumns.TABLE_CAT;
+import static com.firebolt.jdbc.metadata.MetadataColumns.TABLE_CATALOG;
+import static com.firebolt.jdbc.metadata.MetadataColumns.TABLE_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.TABLE_SCHEM;
+import static com.firebolt.jdbc.metadata.MetadataColumns.TABLE_TYPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.TYPE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.TYPE_CAT;
+import static com.firebolt.jdbc.metadata.MetadataColumns.TYPE_NAME;
+import static com.firebolt.jdbc.metadata.MetadataColumns.TYPE_SCHEM;
+import static com.firebolt.jdbc.metadata.MetadataColumns.UNSIGNED_ATTRIBUTE;
+import static com.firebolt.jdbc.metadata.MetadataColumns.UPDATE_RULE;
+import static com.firebolt.jdbc.type.FireboltDataType.ARRAY;
+import static com.firebolt.jdbc.type.FireboltDataType.BIG_INT;
+import static com.firebolt.jdbc.type.FireboltDataType.BOOLEAN;
+import static com.firebolt.jdbc.type.FireboltDataType.BYTEA;
+import static com.firebolt.jdbc.type.FireboltDataType.DATE;
+import static com.firebolt.jdbc.type.FireboltDataType.DOUBLE_PRECISION;
+import static com.firebolt.jdbc.type.FireboltDataType.INTEGER;
+import static com.firebolt.jdbc.type.FireboltDataType.NUMERIC;
+import static com.firebolt.jdbc.type.FireboltDataType.REAL;
+import static com.firebolt.jdbc.type.FireboltDataType.TEXT;
+import static com.firebolt.jdbc.type.FireboltDataType.TIMESTAMP;
+import static com.firebolt.jdbc.type.FireboltDataType.TUPLE;
+import static java.lang.String.format;
+import static java.sql.ResultSet.TYPE_FORWARD_ONLY;
 import static java.sql.Types.VARCHAR;
+import static java.util.Map.entry;
+import static java.util.regex.Pattern.CASE_INSENSITIVE;
+import static java.util.regex.Pattern.compile;
+import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toList;
-import static org.apache.commons.lang3.StringUtils.containsIgnoreCase;
 
-@CustomLog
-public class FireboltDatabaseMetadata implements DatabaseMetaData {
+@SuppressWarnings("java:S6204") // compatibility with JDK 11
+public class FireboltDatabaseMetadata implements DatabaseMetaData, GenericWrapper {
 
-	private static final String PUBLIC_SCHEMA_NAME = "public";
-	private static final String INFORMATION_SCHEMA_NAME = "information_schema";
-	private static final String CATALOG_SCHEMA_NAME = "catalog";
+	private static final String TABLE = "TABLE";
+	private static final String VIEW = "VIEW";
 	private static final String QUOTE = "'";
 	private static final int MAX_IDENTIFIER_LENGTH = 63;
+	private static final int MAX_LITERAL_LENGTH = 0x40000; // 262144
+
 	private final String url;
 	private final FireboltConnection connection;
-	private String databaseVersion;
+	private volatile String databaseVersion;
 
 	public FireboltDatabaseMetadata(String url, FireboltConnection connection) {
 		this.url = url;
@@ -46,28 +172,34 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 
 	@Override
 	public ResultSet getSchemas(String catalog, String schemaPattern) throws SQLException {
-		String dbName = connection.getSessionProperties().getDatabase();
-		List<String> publicRow = Arrays.asList(PUBLIC_SCHEMA_NAME, dbName);
-		List<String> informationSchemaRow = Arrays.asList(INFORMATION_SCHEMA_NAME, dbName);
-		List<String> catalogRow = Arrays.asList(CATALOG_SCHEMA_NAME, dbName);
-		return FireboltResultSet.of(QueryResult.builder()
-				.columns(Arrays.asList(QueryResult.Column.builder().name(TABLE_SCHEM).type(TEXT).build(),
-						QueryResult.Column.builder().name(TABLE_CATALOG).type(TEXT).build()))
-				.rows(Arrays.asList(publicRow, informationSchemaRow, catalogRow)).build());
+		String catalogClause = catalog == null ? null : format("%s LIKE '%s'", TABLE_CATALOG, catalog);
+		String schemaClause = schemaPattern == null ? null : format("TABLE_SCHEMA LIKE '%s'", schemaPattern);
+		String where = Stream.of(catalogClause, schemaClause).filter(Objects::nonNull).collect(joining(" AND "));
+		if (!where.isEmpty()) {
+			where = " WHERE " + where;
+		}
+		return getSchemas("SELECT DISTINCT TABLE_SCHEMA AS TABLE_SCHEM, TABLE_CATALOG FROM information_schema.tables" + where);
+	}
+
+	private ResultSet getSchemas(String query) throws SQLException {
+		List<List<?>> rows = new ArrayList<>();
+		try (Statement statement = connection.createStatement();
+			 ResultSet schemaDescription = statement.executeQuery(query)) {
+			while (schemaDescription.next()) {
+				rows.add(List.of(schemaDescription.getString(TABLE_SCHEM), schemaDescription.getString(TABLE_CATALOG)));
+			}
+		}
+		return createResultSet(Stream.of(entry(TABLE_SCHEM, TEXT), entry(TABLE_CATALOG, TEXT)), rows);
 	}
 
 	@Override
 	public ResultSet getTableTypes() throws SQLException {
-		return FireboltResultSet.of(QueryResult.builder()
-				.columns(List.of(QueryResult.Column.builder().name(TABLE_TYPE).type(TEXT).build()))
-				.rows(List.of(List.of("TABLE"), List.of("VIEW"))).build());
+		return createResultSet(Stream.of(entry(TABLE_TYPE, TEXT)), List.of(List.of(TABLE), List.of(VIEW)));
 	}
 
 	@Override
 	public ResultSet getCatalogs() throws SQLException {
-		return FireboltResultSet.of(QueryResult.builder()
-				.columns(Collections.singletonList(QueryResult.Column.builder().name(TABLE_CAT).type(TEXT).build()))
-				.rows(Collections.singletonList(Collections.singletonList(connection.getCatalog()))).build());
+		return createResultSet(Stream.of(entry(TABLE_CAT, TEXT)), List.of(List.of(connection.getCatalog())));
 	}
 
 	@Override
@@ -76,63 +208,37 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 	}
 
 	@Override
-	public String getDatabaseProductName() throws SQLException {
+	public String getDatabaseProductName() {
 		return "Firebolt";
 	}
 
 	@Override
-	public String getURL() throws SQLException {
+	public String getURL() {
 		return url;
 	}
 
 	@Override
-	public String getDriverName() throws SQLException {
+	public String getDriverName() {
 		return "Firebolt JDBC Driver";
 	}
 
 	@Override
-	public boolean supportsTransactionIsolationLevel(int level) throws SQLException {
+	public boolean supportsTransactionIsolationLevel(int level) {
 		return level == Connection.TRANSACTION_NONE;
 	}
 
 	@Override
 	public ResultSet getColumns(String catalog, String schemaPattern, String tableNamePattern, String columnNamePattern)
 			throws SQLException {
-		List<QueryResult.Column> columns = Arrays.asList(
-				QueryResult.Column.builder().name(TABLE_CAT).type(TEXT).build(),
-				QueryResult.Column.builder().name(TABLE_SCHEM).type(TEXT).build(),
-				QueryResult.Column.builder().name(TABLE_NAME).type(TEXT).build(),
-				QueryResult.Column.builder().name(COLUMN_NAME).type(TEXT).build(),
-				QueryResult.Column.builder().name(DATA_TYPE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(TYPE_NAME).type(TEXT).build(),
-				QueryResult.Column.builder().name(COLUMN_SIZE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(BUFFER_LENGTH).type(INTEGER).build(),
-				QueryResult.Column.builder().name(DECIMAL_DIGITS).type(INTEGER).build(),
-				QueryResult.Column.builder().name(NUM_PREC_RADIX).type(INTEGER).build(),
-				QueryResult.Column.builder().name(NULLABLE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(REMARKS).type(TEXT).build(),
-				QueryResult.Column.builder().name(COLUMN_DEF).type(TEXT).build(),
-				QueryResult.Column.builder().name(SQL_DATA_TYPE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(SQL_DATETIME_SUB).type(INTEGER).build(),
-				QueryResult.Column.builder().name(CHAR_OCTET_LENGTH).type(INTEGER).build(),
-				QueryResult.Column.builder().name(ORDINAL_POSITION).type(INTEGER).build(),
-				QueryResult.Column.builder().name(IS_NULLABLE).type(TEXT).build(),
-				QueryResult.Column.builder().name(SCOPE_CATALOG).type(TEXT).build(),
-				QueryResult.Column.builder().name(SCOPE_SCHEMA).type(TEXT).build(),
-				QueryResult.Column.builder().name(SCOPE_TABLE).type(TEXT).build(),
-				QueryResult.Column.builder().name(SOURCE_DATA_TYPE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(IS_AUTOINCREMENT).type(TEXT).build(),
-				QueryResult.Column.builder().name(IS_GENERATEDCOLUMN).type(TEXT).build());
-
 		List<List<?>> rows = new ArrayList<>();
 		String query = MetadataUtil.getColumnsQuery(schemaPattern, tableNamePattern, columnNamePattern);
-		try (Statement statement = this.connection.createStatement();
+		try (Statement statement = connection.createStatement();
 				ResultSet columnDescription = statement.executeQuery(query)) {
 			while (columnDescription.next()) {
-				List<?> row;
 				Column columnInfo = Column.of(columnDescription.getString("data_type"),
 						columnDescription.getString("column_name"));
-				row = Arrays.asList(connection.getCatalog(), // TABLE_CAT
+				String columnDefault = columnDescription.getString("column_default");
+				rows.add(Arrays.asList(connection.getCatalog(), // TABLE_CAT
 						columnDescription.getString("table_schema"), // schema
 						columnDescription.getString("table_name"), // table name
 						columnDescription.getString("column_name"), // column name
@@ -144,14 +250,12 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 						String.valueOf(COMMON_RADIX), // radix
 						isColumnNullable(columnDescription) ? columnNullable : columnNoNulls,
 						null, // description of the column
-						StringUtils.isNotBlank(columnDescription.getString("column_default"))
-								? columnDescription.getString("column_default")
-								: null, // default value for the column: null,
+						columnDefault == null || columnDefault.isBlank() ? null : columnDefault,
 						null, // SQL_DATA_TYPE - reserved for future use (see javadoc)
 						null, // SQL_DATETIME_SUB - reserved for future use (see javadoc)
 						null, // CHAR_OCTET_LENGTH - The maximum
-								// length of binary and character
-								// based columns (null for others)
+						// length of binary and character
+						// based columns (null for others)
 						columnDescription.getInt("ordinal_position"), // The ordinal position starting from 1
 						isColumnNullable(columnDescription) ? "YES" : "NO",
 						null, // "SCOPE_CATALOG - Unused
@@ -159,66 +263,79 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 						null, // "SCOPE_TABLE" - Unused
 						null, // "SOURCE_DATA_TYPE" - Unused
 						"NO", // IS_AUTOINCREMENT - Not supported
-						"NO"); // IS_GENERATEDCOLUMN - Not supported
-				rows.add(row);
+						"NO")); // IS_GENERATEDCOLUMN - Not supported
 			}
-			return FireboltResultSet.of(QueryResult.builder().rows(rows).columns(columns).build());
+			return createResultSet(
+					Stream.of(
+							entry(TABLE_CAT, TEXT),
+							entry(TABLE_SCHEM, TEXT),
+							entry(TABLE_NAME, TEXT),
+							entry(COLUMN_NAME, TEXT),
+							entry(DATA_TYPE, INTEGER),
+							entry(TYPE_NAME, TEXT),
+							entry(COLUMN_SIZE, INTEGER),
+							entry(BUFFER_LENGTH, INTEGER),
+							entry(DECIMAL_DIGITS, INTEGER),
+							entry(NUM_PREC_RADIX, INTEGER),
+							entry(NULLABLE, INTEGER),
+							entry(REMARKS, TEXT),
+							entry(COLUMN_DEF, TEXT),
+							entry(SQL_DATA_TYPE, INTEGER),
+							entry(SQL_DATETIME_SUB, INTEGER),
+							entry(CHAR_OCTET_LENGTH, INTEGER),
+							entry(ORDINAL_POSITION, INTEGER),
+							entry(IS_NULLABLE, TEXT),
+							entry(SCOPE_CATALOG, TEXT),
+							entry(SCOPE_SCHEMA, TEXT),
+							entry(SCOPE_TABLE, TEXT),
+							entry(SOURCE_DATA_TYPE, INTEGER),
+							entry(IS_AUTOINCREMENT, TEXT),
+							entry(IS_GENERATEDCOLUMN, TEXT)),
+					rows);
 		}
 	}
 
 	private boolean isColumnNullable(ResultSet columnDescription) throws SQLException {
+		final String isNullable = "is_nullable";
 		try {
-			return columnDescription.getInt("is_nullable") == 1;
-		} catch (Exception e) {
-			return columnDescription.getBoolean("is_nullable");
+			return columnDescription.getInt(isNullable) == 1;
+		} catch (SQLException | NumberFormatException e1) {
+			try {
+				return columnDescription.getBoolean(isNullable);
+			} catch (SQLException e2) {
+				return "YES".equals(columnDescription.getString(isNullable));
+			}
 		}
 	}
 
 	@Override
-	public ResultSet getTables(String catalog, String schemaPattern, String tableNamePattern, String[] typesArr)
-			throws SQLException {
-		List<List<?>> rows = Stream
-				.of(this.getTables(catalog, schemaPattern, tableNamePattern, typesArr, false),
-						this.getTables(catalog, schemaPattern, tableNamePattern, typesArr, true))
-				.flatMap(Collection::stream).collect(toList());
-
-		return FireboltResultSet.of(QueryResult.builder()
-				.columns(Arrays.asList(QueryResult.Column.builder().name(TABLE_CAT).type(TEXT).build(),
-						QueryResult.Column.builder().name(TABLE_SCHEM).type(TEXT).build(),
-						QueryResult.Column.builder().name(TABLE_NAME).type(TEXT).build(),
-						QueryResult.Column.builder().name(TABLE_TYPE).type(TEXT).build(),
-						QueryResult.Column.builder().name(REMARKS).type(TEXT).build(),
-						QueryResult.Column.builder().name(TYPE_CAT).type(TEXT).build(),
-						QueryResult.Column.builder().name(TYPE_SCHEM).type(TEXT).build(),
-						QueryResult.Column.builder().name(TYPE_NAME).type(TEXT).build(),
-						QueryResult.Column.builder().name(SELF_REFERENCING_COL_NAME).type(TEXT).build(),
-						QueryResult.Column.builder().name(REF_GENERATION).type(TEXT).build()))
-				.rows(rows).build());
+	public ResultSet getTables(String catalog, String schemaPattern, String tableNamePattern, String[] typesArr) throws SQLException {
+		return createResultSet(
+				Stream.of(TABLE_CAT, TABLE_SCHEM, TABLE_NAME, TABLE_TYPE, REMARKS, TYPE_CAT, TYPE_SCHEM, TYPE_NAME, SELF_REFERENCING_COL_NAME, REF_GENERATION)
+						.map(name -> entry(name, TEXT)),
+				getTablesData(catalog, schemaPattern, tableNamePattern, typesArr));
 	}
 
-	private List<List<?>> getTables(String catalog, String schemaPattern, String tableNamePattern, String[] typesArr,
-			boolean isView) throws SQLException {
+	private List<List<?>> getTablesData(String catalog, String schemaPattern, String tableNamePattern, String[] typesArr) throws SQLException {
+		Set<String> types = typesArr == null ? Set.of(TABLE, VIEW) : Set.of(typesArr);
+		List<String> tableTypes = List.of("BASE TABLE", "DIMENSION", "FACT");
+		List<String> trulyTableTypes = new ArrayList<>();
+		if (types.contains(TABLE)) {
+			trulyTableTypes.addAll(tableTypes);
+		}
+		if (types.contains(VIEW)) {
+			trulyTableTypes.add(VIEW);
+		}
+		String query = MetadataUtil.getTablesQuery(catalog, schemaPattern, tableNamePattern, trulyTableTypes.toArray(new String[0]));
 		List<List<?>> rows = new ArrayList<>();
-
-		String query = isView ? MetadataUtil.getViewsQuery(catalog, schemaPattern, tableNamePattern)
-				: MetadataUtil.getTablesQuery(catalog, schemaPattern, tableNamePattern);
-		try (Statement statement = this.connection.createStatement();
-				ResultSet tables = statement.executeQuery(query)) {
-
-			Set<String> types = typesArr != null ? new HashSet<>(Arrays.asList(typesArr)) : null;
+		try (Statement statement = connection.createStatement(); ResultSet tables = statement.executeQuery(query)) {
 			while (tables.next()) {
-				List<String> row = new ArrayList<>();
-				row.add(connection.getCatalog());
-				row.add(tables.getString("table_schema"));
-				row.add(tables.getString("table_name"));
-				String tableType = isView ? "VIEW" : "TABLE";
-				row.add(tableType);
-				for (int i = 3; i < 9; i++) {
-					row.add(null);
-				}
-				if (types == null || types.contains(tableType)) {
-					rows.add(row);
-				}
+				String tableType = tables.getString("table_type");
+				tableType = tableTypes.contains(tableType) ? TABLE: tableType; // replace FACT and DIMENSION by TABLE
+				List<String> row = Arrays.asList(
+						connection.getCatalog(), tables.getString("table_schema"), tables.getString("table_name"), tableType,
+						null, null, null, null, null, null);
+				rows.add(row);
 			}
 		}
 		return rows;
@@ -226,55 +343,54 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 
 	@Override
 	public ResultSet getTypeInfo() throws SQLException {
-		List<QueryResult.Column> columns = Arrays.asList(
-				QueryResult.Column.builder().name(TYPE_NAME).type(TEXT).build(),
-				QueryResult.Column.builder().name(DATA_TYPE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(PRECISION).type(INTEGER).build(),
-				QueryResult.Column.builder().name(LITERAL_PREFIX).type(TEXT).build(),
-				QueryResult.Column.builder().name(LITERAL_SUFFIX).type(TEXT).build(),
-				QueryResult.Column.builder().name(CREATE_PARAMS).type(TEXT).build(),
-				QueryResult.Column.builder().name(NULLABLE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(CASE_SENSITIVE).type(BOOLEAN).build(),
-				QueryResult.Column.builder().name(SEARCHABLE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(UNSIGNED_ATTRIBUTE).type(BOOLEAN).build(),
-				QueryResult.Column.builder().name(FIXED_PREC_SCALE).type(BOOLEAN).build(),
-				QueryResult.Column.builder().name(AUTO_INCREMENT).type(BOOLEAN).build(),
-				QueryResult.Column.builder().name(LOCAL_TYPE_NAME).type(TEXT).build(),
-				QueryResult.Column.builder().name(MINIMUM_SCALE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(MAXIMUM_SCALE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(SQL_DATA_TYPE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(SQL_DATETIME_SUB).type(INTEGER).build(),
-				QueryResult.Column.builder().name(NUM_PREC_RADIX).type(INTEGER).build());
-
-		List<List<?>> rows = new ArrayList<>();
 		List<FireboltDataType> usableTypes = Arrays.asList(INTEGER, BIG_INT, REAL, DOUBLE_PRECISION, TEXT, DATE,
 				TIMESTAMP, NUMERIC, ARRAY, TUPLE, BYTEA, BOOLEAN);
-		usableTypes
-				.forEach(
-						type -> rows.add(Arrays.asList(type.getDisplayName(), type.getSqlType(),
-								type.getPrecision(), QUOTE, // LITERAL_PREFIX
-								QUOTE, // LITERAL_SUFFIX
-								null, // Description of the creation parameters - can be null (can set if needed
-										// in the future)
-								typeNullableUnknown, // It depends - A type can be nullable or not depending on
-								// the presence of the additional keyword Nullable()
-								type.isCaseSensitive(), type.getSqlType() == VARCHAR ? typeSearchable
-										: typePredBasic, /*
-															 * SEARCHABLE - LIKE can only be used for VARCHAR
-															 */
-								!type.isSigned(),
-								false, // FIXED_PREC_SCALE - indicates if the type can be a money value.
-												// Always
-												// false as we do not have a money type
-								false, // AUTO_INCREMENT
-								null, // LOCAL_TYPE_NAME
-								type.getMinScale(), // MINIMUM_SCALE
-								type.getMaxScale(), // MAXIMUM_SCALE
-								null, // SQL_DATA_TYPE - Not needed - reserved for future use
-								null, // SQL_DATETIME_SUB - Not needed - reserved for future use
-								COMMON_RADIX)));
+		List<List<?>> rows = usableTypes.stream().map(type ->
+				Arrays.asList(type.getDisplayName(), type.getSqlType(),
+						type.getPrecision(), QUOTE, // LITERAL_PREFIX
+						QUOTE, // LITERAL_SUFFIX
+						null, // Description of the creation parameters - can be null (can set if needed
+						// in the future)
+						typeNullableUnknown, // It depends - A type can be nullable or not depending on
+						// the presence of the additional keyword Nullable()
+						type.isCaseSensitive(), type.getSqlType() == VARCHAR ? typeSearchable
+								: typePredBasic, /*
+						 * SEARCHABLE - LIKE can only be used for VARCHAR
+						 */
+						!type.isSigned(),
+						false, // FIXED_PREC_SCALE - indicates if the type can be a money value.
+						// Always
+						// false as we do not have a money type
+						false, // AUTO_INCREMENT
+						null, // LOCAL_TYPE_NAME
+						type.getMinScale(), // MINIMUM_SCALE
+						type.getMaxScale(), // MAXIMUM_SCALE
+						null, // SQL_DATA_TYPE - Not needed - reserved for future use
+						null, // SQL_DATETIME_SUB - Not needed - reserved for future use
+						COMMON_RADIX))
+				.collect(toList());
 
-		return FireboltResultSet.of(QueryResult.builder().columns(columns).rows(rows).build());
+		return createResultSet(
+				Stream.of(
+						entry(TYPE_NAME, TEXT),
+						entry(DATA_TYPE, INTEGER),
+						entry(PRECISION, INTEGER),
+						entry(LITERAL_PREFIX, TEXT),
+						entry(LITERAL_SUFFIX, TEXT),
+						entry(CREATE_PARAMS, TEXT),
+						entry(NULLABLE, INTEGER),
+						entry(CASE_SENSITIVE, BOOLEAN),
+						entry(SEARCHABLE, INTEGER),
+						entry(UNSIGNED_ATTRIBUTE, BOOLEAN),
+						entry(FIXED_PREC_SCALE, BOOLEAN),
+						entry(AUTO_INCREMENT, BOOLEAN),
+						entry(LOCAL_TYPE_NAME, TEXT),
+						entry(MINIMUM_SCALE, INTEGER),
+						entry(MAXIMUM_SCALE, INTEGER),
+						entry(SQL_DATA_TYPE, INTEGER),
+						entry(SQL_DATETIME_SUB, INTEGER),
+						entry(NUM_PREC_RADIX, INTEGER)),
+				rows);
 	}
 
 	@Override
@@ -289,16 +405,12 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 
 	@Override
 	public String getDatabaseProductVersion() throws SQLException {
-		if (this.databaseVersion == null) {
-			String engine = this.connection.getEngine();
-			try (Statement statement = this.connection.createStatement()) {
-				String query = MetadataUtil.getDatabaseVersionQuery(engine);
-				ResultSet rs = statement.executeQuery(query);
-				rs.next();
-				this.databaseVersion = rs.getString(1);
+		if (databaseVersion == null) {
+			try (Statement statement = connection.createStatement(); ResultSet rs = statement.executeQuery("SELECT VERSION()")) {
+				databaseVersion = rs.next() ? rs.getString(1) : "";
 			}
 		}
-		return this.databaseVersion;
+		return databaseVersion;
 	}
 
 	@Override
@@ -312,49 +424,33 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 	}
 
 	@Override
-	public int getJDBCMajorVersion() throws SQLException {
+	public int getJDBCMajorVersion() {
 		return VersionUtil.extractMajorVersion(VersionUtil.getSpecificationVersion());
 	}
 
 	@Override
-	public int getJDBCMinorVersion() throws SQLException {
+	public int getJDBCMinorVersion() {
 		return VersionUtil.extractMinorVersion(VersionUtil.getSpecificationVersion());
 	}
 
 	@Override
-	public String getDriverVersion() throws SQLException {
+	public String getDriverVersion() {
 		return VersionUtil.getDriverVersion();
 	}
 
 	@Override
-	public boolean isWrapperFor(Class<?> iface) throws SQLException {
-		return iface.isAssignableFrom(getClass());
+	public boolean allProceduresAreCallable() {
+		return false;
 	}
 
 	@Override
-	public <T> T unwrap(Class<T> iface) throws SQLException {
-		if (iface.isAssignableFrom(getClass())) {
-			return iface.cast(this);
-		}
-		throw new SQLException("Cannot unwrap to " + iface.getName());
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean allProceduresAreCallable() throws SQLException {
+	public boolean allTablesAreSelectable() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean allTablesAreSelectable() throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public String getUserName() throws SQLException {
-		return connection.getSessionProperties().getUser();
+	public String getUserName() {
+		return connection.getSessionProperties().getPrincipal();
 	}
 
 	@Override
@@ -363,680 +459,577 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean nullsAreSortedHigh() throws SQLException {
-		return true;
+	public boolean nullsAreSortedHigh() {
+		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean nullsAreSortedLow() throws SQLException {
+	public boolean nullsAreSortedLow() {
 		return !nullsAreSortedHigh();
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean nullsAreSortedAtStart() throws SQLException {
-		return true;
+	public boolean nullsAreSortedAtStart() {
+		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean nullsAreSortedAtEnd() throws SQLException {
+	public boolean nullsAreSortedAtEnd() {
 		return !nullsAreSortedAtStart();
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean usesLocalFiles() throws SQLException {
+	public boolean usesLocalFiles() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean usesLocalFilePerTable() throws SQLException {
+	public boolean usesLocalFilePerTable() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsMixedCaseIdentifiers() throws SQLException {
+	public boolean supportsMixedCaseIdentifiers() {
+		return false;
+	}
+
+	@Override
+	public boolean storesUpperCaseIdentifiers() {
+		return false;
+	}
+
+	@Override
+	public boolean storesLowerCaseIdentifiers() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean storesUpperCaseIdentifiers() throws SQLException {
+	public boolean storesMixedCaseIdentifiers() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean storesLowerCaseIdentifiers() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean storesMixedCaseIdentifiers() throws SQLException {
+	public boolean supportsMixedCaseQuotedIdentifiers() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsMixedCaseQuotedIdentifiers() throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean storesUpperCaseQuotedIdentifiers() throws SQLException {
+	public boolean storesUpperCaseQuotedIdentifiers() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean storesLowerCaseQuotedIdentifiers() throws SQLException {
+	public boolean storesLowerCaseQuotedIdentifiers() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean storesMixedCaseQuotedIdentifiers() throws SQLException {
+	public boolean storesMixedCaseQuotedIdentifiers() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public String getIdentifierQuoteString() throws SQLException {
+	public String getIdentifierQuoteString() {
 		return "\"";
 	}
 
 	@Override
 	public String getSQLKeywords() {
 		// Firebolt reserved words minus SQL:2003 keywords
-		return "BOOL,CONCAT,COPY,DATABASE,DATETIME,DOUBLECOLON,DOW,"
-				+ "DOY,EMPTY_IDENTIFIER,EPOCH,EXPLAIN,EXTRACT,FIRST,GENERATE,ILIKE,ISNULL,"
-				+ "JOIN_TYPE,LIMIT,LIMIT_DISTINCT,LONG,NEXT,OFFSET,PRIMARY,QUARTER,SAMPLE,SHOW,TEXT,"
-				+ "TOP,TRIM,TRUNCATE,UNKNOWN_CHAR,UNTERMINATED_STRING,WEEK";
+		return "ACCOUNT,AGGREGATING,ALTER,AS,ATTACH,CACHE,CANCEL,COLUMNS,COPY,CREATE,DATABASE,DATABASES,DELETE,DESCRIBE,DROP,"
+				+ "ENGINE,ENGINES,EXTERNAL,GRANT,INDEX,INDEXES,INSERT,LOGIN,NETWORK,ORGANIZATION,POLICY,QUERY,REVOKE,ROLE,"
+				+ "SELECT,SERVICE,SHOW,START,STOP,TABLE,TABLES,TO,TRUNCATE,UPDATE,USER,VACUUM,VIEW,VIEWS";
 	}
 
 	@Override
 	public String getNumericFunctions() {
-		return "ABS,ACOS,ASIN,ATAN,ATAN2,CBRT,CEIL,CEILING,COS,COT,DEGREES,EXP,FLOOR,LOG,MOD,PI,POW,,POWER,RADIANS,RANDOM,ROUND,SIGN,SIN,SQRT,TAN,TRUNC";
+		return "ABS,ACOS,ASIN,ATAN,ATAN2,CBRT,CEIL,COS,COT,DEGREES,EXP,FLOOR,LOG,MOD,PI,POW,RADIANS,RANDOM,ROUND,SIGN,SIN,SQRT,TAN,TRUNC";
 	}
 
 	@Override
 	public String getStringFunctions() {
-		return "BASE64_ENCODE,CONCAT,EXTRACT_ALL,GEN_RANDOM_UUID,ILIKE,LENGTH,LIKE,LOWER,LPAD,LTRIM,MATCH,MATCH_ANY,"
-				+ "MD5,MD5_NUMBER_LOWER64,MD5_NUMBER_UPPER64,REGEXP_LIKE,REGEXP_MATCHES,REGEXP_REPLACE,REPEAT,REPLACE,REVERSE,"
-				+ "RPAD,RTRIM,SPLIT,SPLIT_PART,STRPOS,SUBSTRING,TO_DATE,TO_DOUBLE,TO_FLOAT,TO_INT,TO_TIMESTAMP,TO_TIMESTAMPTZ,TRIM,UPPER";
+		return "ARRAY_ENUMERATE,BASE64_ENCODE,BTRIM,CONCAT,EXTRACT_ALL,GEN_RANDOM_UUID,ILIKE,LENGTH,LIKE,LOWER,LPAD,LTRIM,MATCH,MATCH_ANY,"
+				+ "MD5,MD5_NUMBER_LOWER64,MD5_NUMBER_UPPER64,OCTET_LENGTH,REGEXP_LIKE,REGEXP_MATCHES,REGEXP_REPLACE,REPEAT,REPLACE,REVERSE,"
+				+ "RPAD,RTRIM,SPLIT,SPLIT_PART,STRPOS,SUBSTRING,SUBSTR,TO_DOUBLE,TO_FLOAT,TO_INT,TRIM,UPPER,URL_DECODE,URL_ENCODE";
 	}
 
 	@Override
 	public String getSystemFunctions() {
-		return "IFNULL";
+		return "VERSION";
 	}
 
 	@Override
 	public String getTimeDateFunctions() {
-		return "CURRENT_DATE,CURRENT_TIMESTAMP,DATE_ADD,DATE_DIFF,DATE_TRUNC,EXTRACT,LOCALTIMESTAMP,TO_CHAR,TO_DATE,TO_TIMESTAMP,TO_TIMESTAMPTZ";
+		return "CURRENT_DATE,CURRENT_TIMESTAMP,DATE_ADD,DATE_DIFF,DATE_TRUNC,EXTRACT,TO_CHAR,TO_DATE,TO_TIMESTAMP,TO_TIMESTAMPTZ";
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public String getSearchStringEscape() throws SQLException {
+	public String getSearchStringEscape() {
 		return "\\";
 	}
 
 	/**
 	 * Returns empty string for compatibility with PostgreSQL.
 	 * @return empty string
-	 * @throws SQLException - if fact does not throw exception because the implementation is trivial
 	 */
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public String getExtraNameCharacters() throws SQLException {
+	public String getExtraNameCharacters() {
 		return "";
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsAlterTableWithAddColumn() throws SQLException {
+	public boolean supportsAlterTableWithAddColumn() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsAlterTableWithDropColumn() throws SQLException {
+	public boolean supportsAlterTableWithDropColumn() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsColumnAliasing() throws SQLException {
+	public boolean supportsColumnAliasing() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean nullPlusNonNullIsNull() throws SQLException {
+	public boolean nullPlusNonNullIsNull() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsConvert() throws SQLException {
+	public boolean supportsConvert() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsConvert(int fromType, int toType) throws SQLException {
+	public boolean supportsConvert(int fromType, int toType) {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsTableCorrelationNames() throws SQLException {
+	public boolean supportsTableCorrelationNames() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsDifferentTableCorrelationNames() throws SQLException {
+	public boolean supportsDifferentTableCorrelationNames() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsExpressionsInOrderBy() throws SQLException {
+	public boolean supportsExpressionsInOrderBy() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsOrderByUnrelated() throws SQLException {
+	public boolean supportsOrderByUnrelated() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsGroupBy() throws SQLException {
+	public boolean supportsGroupBy() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsGroupByUnrelated() throws SQLException {
+	public boolean supportsGroupByUnrelated() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsGroupByBeyondSelect() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsLikeEscapeClause() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsMultipleResultSets() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsMultipleTransactions() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsNonNullableColumns() {
 		return true;
 	}
 
+	/**
+	 * {@inheritDoc}
+	 *  <p>This grammar is defined at:
+     * <a href="https://learn.microsoft.com/en-us/sql/odbc/reference/appendixes/sql-minimum-grammar?view=sql-server-ver16">SQL Minimum Grammar</a>
+     * @return true
+     * @throws SQLException - actually never throws
+     */
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsGroupByBeyondSelect() throws SQLException {
+	public boolean supportsMinimumSQLGrammar() {
 		return true;
 	}
 
+	/**
+	 * Does this driver support the Core ODBC SQL grammar. We need SQL-92 conformance for this.
+	 *
+	 * @return false
+	 */
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsLikeEscapeClause() throws SQLException {
+	public boolean supportsCoreSQLGrammar() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsMultipleResultSets() throws SQLException {
+	public boolean supportsExtendedSQLGrammar() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsMultipleTransactions() throws SQLException {
+	public boolean supportsANSI92EntryLevelSQL() {
+		// We do not support it (eg: we would need to be compliant with JDBC and support 'schema')
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsNonNullableColumns() throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsMinimumSQLGrammar() throws SQLException {
+	public boolean supportsANSI92IntermediateSQL() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsCoreSQLGrammar() throws SQLException {
+	public boolean supportsANSI92FullSQL() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsExtendedSQLGrammar() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsANSI92EntryLevelSQL() throws SQLException {
-		// We do not support it (eg: we would need to be compliant with JDBC and support
-		// 'schema')
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsANSI92IntermediateSQL() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsANSI92FullSQL() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsIntegrityEnhancementFacility() throws SQLException {
+	public boolean supportsIntegrityEnhancementFacility() {
 		// Similar approach as pgjdbc: we assume it means supported constraints
+		return false;
+	}
+
+	@Override
+	public boolean supportsOuterJoins() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsOuterJoins() throws SQLException {
+	public boolean supportsFullOuterJoins() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsFullOuterJoins() throws SQLException {
+	public boolean supportsLimitedOuterJoins() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsLimitedOuterJoins() throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public String getSchemaTerm() throws SQLException {
+	public String getSchemaTerm() {
 		return "schema";
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public String getProcedureTerm() throws SQLException {
+	public String getProcedureTerm() {
 		return "procedure";
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public String getCatalogTerm() throws SQLException {
+	public String getCatalogTerm() {
 		return "database";
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean isCatalogAtStart() throws SQLException {
+	public boolean isCatalogAtStart() {
 		// it is currently not supported but it will be soon
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public String getCatalogSeparator() throws SQLException {
+	public String getCatalogSeparator() {
 		return ".";
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSchemasInDataManipulation() throws SQLException {
+	public boolean supportsSchemasInDataManipulation() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsSchemasInProcedureCalls() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsSchemasInTableDefinitions() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsSchemasInIndexDefinitions() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsSchemasInPrivilegeDefinitions() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsCatalogsInDataManipulation() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsCatalogsInProcedureCalls() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsCatalogsInTableDefinitions() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsCatalogsInIndexDefinitions() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsCatalogsInPrivilegeDefinitions() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsPositionedDelete() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsPositionedUpdate() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsSelectForUpdate() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsStoredProcedures() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsSubqueriesInComparisons() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSchemasInProcedureCalls() throws SQLException {
+	public boolean supportsSubqueriesInExists() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSchemasInTableDefinitions() throws SQLException {
+	public boolean supportsSubqueriesInIns() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSchemasInIndexDefinitions() throws SQLException {
+	public boolean supportsSubqueriesInQuantifieds() {
+		return false;
+	}
+
+	@Override
+	public boolean supportsCorrelatedSubqueries() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSchemasInPrivilegeDefinitions() throws SQLException {
+	public boolean supportsUnion() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsCatalogsInDataManipulation() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsCatalogsInProcedureCalls() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsCatalogsInTableDefinitions() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsCatalogsInIndexDefinitions() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsCatalogsInPrivilegeDefinitions() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsPositionedDelete() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsPositionedUpdate() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSelectForUpdate() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsStoredProcedures() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSubqueriesInComparisons() throws SQLException {
+	public boolean supportsUnionAll() {
 		return true;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSubqueriesInExists() throws SQLException {
+	public boolean supportsOpenCursorsAcrossCommit() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSubqueriesInIns() throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSubqueriesInQuantifieds() throws SQLException {
+	public boolean supportsOpenCursorsAcrossRollback() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsCorrelatedSubqueries() throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsUnion() throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsUnionAll() throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsOpenCursorsAcrossCommit() throws SQLException {
+	public boolean supportsOpenStatementsAcrossCommit() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsOpenCursorsAcrossRollback() throws SQLException {
+	public boolean supportsOpenStatementsAcrossRollback()  {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsOpenStatementsAcrossCommit() throws SQLException {
-		return false;
+	@SuppressWarnings("java:S4144") // identical implementation
+	public int getMaxBinaryLiteralLength() {
+		return MAX_LITERAL_LENGTH;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsOpenStatementsAcrossRollback() throws SQLException {
-		return false;
+	@SuppressWarnings("java:S4144") // identical implementation
+	public int getMaxCharLiteralLength() {
+		return MAX_LITERAL_LENGTH;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxBinaryLiteralLength() throws SQLException {
-		return 0;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxCharLiteralLength() throws SQLException {
-		return 0;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxColumnNameLength() throws SQLException {
+	@SuppressWarnings("java:S4144") // identical implementation
+	public int getMaxColumnNameLength() {
 		return MAX_IDENTIFIER_LENGTH;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxColumnsInGroupBy() throws SQLException {
+	public int getMaxColumnsInGroupBy() {
+		return 0x10000; //65536
+	}
+
+	/**
+	 * Indexes are not supported, so the value is irrelevant.
+	 * @return 0
+	 */
+	public int getMaxColumnsInIndex() {
 		return 0;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxColumnsInIndex() throws SQLException {
-		return 0;
+	public int getMaxColumnsInOrderBy() {
+		return 16384;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxColumnsInOrderBy() throws SQLException {
-		return 0;
+	public int getMaxColumnsInSelect() {
+		return 8192;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxColumnsInSelect() throws SQLException {
-		return 0;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxColumnsInTable() throws SQLException {
+	public int getMaxColumnsInTable() {
 		return 1000;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public int getMaxConnections() throws SQLException {
+	public int getMaxConnections() {
 		return 0;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxCursorNameLength() throws SQLException {
+	public int getMaxCursorNameLength() {
 		return 0;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxIndexLength() throws SQLException {
+	public int getMaxIndexLength() {
 		return 0;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxSchemaNameLength() throws SQLException {
+	@SuppressWarnings("java:S4144") // identical implementation
+	public int getMaxSchemaNameLength() {
 		return MAX_IDENTIFIER_LENGTH;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxProcedureNameLength() throws SQLException {
+	public int getMaxProcedureNameLength() {
 		return 0;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxCatalogNameLength() throws SQLException {
-		return 0;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxRowSize() throws SQLException {
-		return 0;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean doesMaxRowSizeIncludeBlobs() throws SQLException {
-		return false;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxStatementLength() throws SQLException {
-		return 0;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxStatements() throws SQLException {
-		return 0;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxTableNameLength() throws SQLException {
+	@SuppressWarnings("java:S4144") // identical implementation
+	public int getMaxCatalogNameLength() {
 		return MAX_IDENTIFIER_LENGTH;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxTablesInSelect() throws SQLException {
+	public int getMaxRowSize() {
 		return 0;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public int getMaxUserNameLength() throws SQLException {
+	public boolean doesMaxRowSizeIncludeBlobs() {
+		return true;
+	}
+
+	@Override
+	public int getMaxStatementLength() {
 		return 0;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public int getDefaultTransactionIsolation() throws SQLException {
+	public int getMaxStatements() {
+		return 0;
+	}
+
+	@Override
+	@SuppressWarnings("java:S4144") // identical implementation
+	public int getMaxTableNameLength() {
+		return MAX_IDENTIFIER_LENGTH;
+	}
+
+	@Override
+	public int getMaxTablesInSelect() {
+		return 0;
+	}
+
+	@Override
+	@SuppressWarnings("java:S4144") // identical implementation
+	public int getMaxUserNameLength() {
+		return MAX_IDENTIFIER_LENGTH;
+	}
+
+	@Override
+	public int getDefaultTransactionIsolation() {
 		return Connection.TRANSACTION_NONE;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsTransactions() throws SQLException {
+	public boolean supportsTransactions() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsDataDefinitionAndDataManipulationTransactions() throws SQLException {
+	public boolean supportsDataDefinitionAndDataManipulationTransactions() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsDataManipulationTransactionsOnly() throws SQLException {
+	public boolean supportsDataManipulationTransactionsOnly() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean dataDefinitionCausesTransactionCommit() throws SQLException {
+	public boolean dataDefinitionCausesTransactionCommit() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean dataDefinitionIgnoredInTransactions() throws SQLException {
+	public boolean dataDefinitionIgnoredInTransactions() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsResultSetType(int type) throws SQLException {
-		return ResultSet.TYPE_FORWARD_ONLY == type;
+	public boolean supportsResultSetType(int type) {
+		return TYPE_FORWARD_ONLY == type;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsResultSetConcurrency(int type, int concurrency) throws SQLException {
-		return false;
+	public boolean supportsResultSetConcurrency(int type, int concurrency) {
+		return type == ResultSet.TYPE_FORWARD_ONLY && concurrency == ResultSet.CONCUR_READ_ONLY;
 	}
 
 	/*
@@ -1044,269 +1037,384 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 	 * since we do not support updating ResultSet objects
 	 */
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean ownUpdatesAreVisible(int type) throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean ownDeletesAreVisible(int type) throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean ownInsertsAreVisible(int type) throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean othersUpdatesAreVisible(int type) throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean othersDeletesAreVisible(int type) throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean othersInsertsAreVisible(int type) throws SQLException {
-		return true;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean updatesAreDetected(int type) throws SQLException {
+	public boolean ownUpdatesAreVisible(int type) {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean deletesAreDetected(int type) throws SQLException {
+	public boolean ownDeletesAreVisible(int type) {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean insertsAreDetected(int type) throws SQLException {
+	public boolean ownInsertsAreVisible(int type) {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsBatchUpdates() throws SQLException {
+	public boolean othersUpdatesAreVisible(int type) {
+		return false;
+	}
+
+	@Override
+	public boolean othersDeletesAreVisible(int type) {
+		return false;
+	}
+
+	@Override
+	public boolean othersInsertsAreVisible(int type) {
+		return false;
+	}
+
+	@Override
+	public boolean updatesAreDetected(int type) {
+		return false;
+	}
+
+	@Override
+	public boolean deletesAreDetected(int type) {
+		return false;
+	}
+
+	@Override
+	public boolean insertsAreDetected(int type) {
+		return false;
+	}
+
+	@Override
+	public boolean supportsBatchUpdates() {
 		// We support it partially (via FireboltPreparedStatement but not with the
 		// 'basic' FireboltStatement )
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsSavepoints() throws SQLException {
+	public boolean supportsSavepoints() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsNamedParameters() throws SQLException {
+	public boolean supportsNamedParameters() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsMultipleOpenResults() throws SQLException {
+	public boolean supportsMultipleOpenResults() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsGetGeneratedKeys() throws SQLException {
+	public boolean supportsGetGeneratedKeys() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsResultSetHoldability(int holdability) throws SQLException {
-		return false;
+	public boolean supportsResultSetHoldability(int holdability) {
+		return holdability == ResultSet.HOLD_CURSORS_OVER_COMMIT;
+	}
+
+	/**
+	 * Since Firebolt does not support transactions commit does not affect the existing {@code ResultSet} and therefore
+	 * it behaves as if it is held between transaction. Therefore, it returns {@link ResultSet#HOLD_CURSORS_OVER_COMMIT}
+	 * @return {@link ResultSet#HOLD_CURSORS_OVER_COMMIT}
+	 */
+	@Override
+	public int getResultSetHoldability() {
+		return ResultSet.HOLD_CURSORS_OVER_COMMIT;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public int getResultSetHoldability() throws SQLException {
-		// N/A applicable as we do not support transactions
-		return 0;
-	}
-
-	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public int getSQLStateType() throws SQLException {
+	public int getSQLStateType() {
 		return sqlStateSQL;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean locatorsUpdateCopy() throws SQLException {
+	public boolean locatorsUpdateCopy() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsStatementPooling() throws SQLException {
+	public boolean supportsStatementPooling() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public RowIdLifetime getRowIdLifetime() throws SQLException {
+	public RowIdLifetime getRowIdLifetime() {
 		return RowIdLifetime.ROWID_UNSUPPORTED;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean supportsStoredFunctionsUsingCallSyntax() throws SQLException {
+	public boolean supportsStoredFunctionsUsingCallSyntax() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean autoCommitFailureClosesAllResultSets() throws SQLException {
+	public boolean autoCommitFailureClosesAllResultSets() {
 		return false;
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public ResultSet getProcedureColumns(String catalog, String schemaPattern, String procedureNamePattern,
-			String columnNamePattern) throws SQLException {
-		return FireboltResultSet.empty();
+	public ResultSet getProcedureColumns(String catalog, String schemaPattern, String procedureNamePattern, String columnNamePattern) throws SQLException {
+		return createEmptyResultSet(Stream.of(
+				entry(PROCEDURE_CAT, TEXT),
+				entry(PROCEDURE_SCHEM, TEXT),
+				entry(PROCEDURE_NAME, TEXT),
+				entry(COLUMN_NAME, TEXT),
+				entry(COLUMN_TYPE, INTEGER), // Short
+				entry(DATA_TYPE, INTEGER),
+				entry(TYPE_NAME, TEXT),
+				entry(PRECISION, INTEGER),
+				entry(LENGTH, INTEGER),
+				entry(SCALE, INTEGER), // short
+				entry(RADIX, INTEGER), // short
+				entry(NULLABLE, INTEGER), // short
+				entry(REMARKS, TEXT),
+				entry(COLUMN_DEF, TEXT),
+				entry(SQL_DATA_TYPE, INTEGER),
+				entry(SQL_DATETIME_SUB, INTEGER),
+				entry(CHAR_OCTET_LENGTH, INTEGER),
+				entry(ORDINAL_POSITION, INTEGER),
+				entry(IS_NULLABLE, TEXT),
+				entry(SPECIFIC_NAME, TEXT)
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public ResultSet getUDTs(String catalog, String schemaPattern, String typeNamePattern, int[] types)
-			throws SQLException {
-		return FireboltResultSet.empty();
+	public ResultSet getUDTs(String catalog, String schemaPattern, String typeNamePattern, int[] types) throws SQLException {
+		return createEmptyResultSet(Stream.of(
+				entry(TYPE_CAT, TEXT),
+				entry(TYPE_SCHEM, TEXT),
+				entry(TYPE_NAME, TEXT),
+				entry(CLASS_NAME, TEXT),
+				entry(DATA_TYPE, INTEGER),
+				entry(REMARKS, TEXT),
+				entry(BASE_TYPE, INTEGER) // short
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
 	public ResultSet getSuperTypes(String catalog, String schemaPattern, String typeNamePattern) throws SQLException {
-		return FireboltResultSet.empty();
+		return createEmptyResultSet(Stream.of(
+				entry(TYPE_CAT, TEXT),
+				entry(TYPE_SCHEM, TEXT),
+				entry(TYPE_NAME, TEXT),
+				entry(SUPERTYPE_CAT, TEXT),
+				entry(SUPERTYPE_SCHEM, TEXT),
+				entry(SUPERTYPE_NAME, TEXT)
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
 	public ResultSet getSuperTables(String catalog, String schemaPattern, String tableNamePattern) throws SQLException {
-		return FireboltResultSet.empty();
+		return createEmptyResultSet(Stream.of(
+				entry(TYPE_CAT, TEXT),
+				entry(TYPE_SCHEM, TEXT),
+				entry(TYPE_NAME, TEXT),
+				entry(SUPERTABLE_NAME, TEXT)
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public ResultSet getAttributes(String catalog, String schemaPattern, String typeNamePattern,
-			String attributeNamePattern) throws SQLException {
-		return FireboltResultSet.empty();
+	public ResultSet getAttributes(String catalog, String schemaPattern, String typeNamePattern, String attributeNamePattern) throws SQLException {
+		return createEmptyResultSet(Stream.of(
+				entry(TYPE_CAT, TEXT),
+				entry(TYPE_SCHEM, TEXT),
+				entry(TYPE_NAME, TEXT),
+				entry(ATTR_NAME, TEXT),
+				entry(DATA_TYPE, INTEGER),
+				entry(ATTR_TYPE_NAME, TEXT),
+				entry(ATTR_SIZE, INTEGER),
+				entry(DECIMAL_DIGITS, INTEGER),
+				entry(NUM_PREC_RADIX, INTEGER),
+				entry(NULLABLE, INTEGER),
+				entry(REMARKS, TEXT),
+				entry(ATTR_DEF, TEXT),
+				entry(SQL_DATA_TYPE, INTEGER),
+				entry(SQL_DATETIME_SUB, INTEGER),
+				entry(CHAR_OCTET_LENGTH, INTEGER),
+				entry(ORDINAL_POSITION, INTEGER),
+				entry(IS_NULLABLE, TEXT),
+				entry(SCOPE_CATALOG, TEXT),
+				entry(SCOPE_SCHEMA, TEXT),
+				entry(SCOPE_TABLE, TEXT),
+				entry(SOURCE_DATA_TYPE, INTEGER) // short
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public ResultSet getProcedures(String catalog, String schemaPattern, String procedureNamePattern)
-			throws SQLException {
-		return FireboltResultSet.empty();
+	public ResultSet getProcedures(String catalog, String schemaPattern, String procedureNamePattern) throws SQLException {
+		return createEmptyResultSet(Stream.of(
+				entry(PROCEDURE_CAT, TEXT),
+				entry(PROCEDURE_SCHEM, TEXT),
+				entry(PROCEDURE_NAME, TEXT),
+				entry(REMARKS, TEXT),
+				entry(PROCEDURE_TYPE, INTEGER), // short
+				entry(SPECIFIC_NAME, TEXT)
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public ResultSet getColumnPrivileges(String catalog, String schema, String table, String columnNamePattern)
-			throws SQLException {
-		return FireboltResultSet.empty();
+	public ResultSet getColumnPrivileges(String catalog, String schemaPattern, String tableNamePattern, String columnNamePattern) throws SQLException {
+		List<List<?>> rows = new ArrayList<>();
+		String query = MetadataUtil.getColumnsQuery(schemaPattern, tableNamePattern, columnNamePattern);
+		try (Statement statement = connection.createStatement();
+			 ResultSet columnDescription = statement.executeQuery(query)) {
+			while (columnDescription.next()) {
+				rows.add(Arrays.asList(connection.getCatalog(),
+						columnDescription.getString("table_schema"),
+						columnDescription.getString("table_name"),
+						columnDescription.getString("column_name"),
+						null,  // grantor
+						null,  // grantee
+						null,  // privilege
+						"NO")); // is_grantable
+			}
+		}
+		return createResultSet(Stream.of(
+				entry(TABLE_CAT, TEXT),
+				entry(TABLE_SCHEM, TEXT),
+				entry(TABLE_NAME, TEXT),
+				entry(COLUMN_NAME, TEXT),
+				entry(GRANTOR, TEXT),
+				entry(GRANTEE, TEXT),
+				entry(PRIVILEGE, TEXT),
+				entry(IS_GRANTABLE, TEXT)
+		), rows);
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public ResultSet getTablePrivileges(String catalog, String schemaPattern, String tableNamePattern)
-			throws SQLException {
-		return FireboltResultSet.empty();
+	public ResultSet getTablePrivileges(String catalog, String schemaPattern, String tableNamePattern) throws SQLException {
+		List<List<?>> rows = new ArrayList<>();
+		String query = MetadataUtil.getTablesQuery(catalog, schemaPattern, tableNamePattern, new String[] {"BASE TABLE", "DIMENSION", "FACT"});
+		try (Statement statement = connection.createStatement();
+			 ResultSet columnDescription = statement.executeQuery(query)) {
+			while (columnDescription.next()) {
+				rows.add(Arrays.asList(connection.getCatalog(),
+						columnDescription.getString("table_schema"),
+						columnDescription.getString("table_name"),
+						null,  // grantor
+						null,  // grantee
+						null,  // privilege
+						"NO")); // is_grantable
+			}
+		}
+		return createResultSet(Stream.of(
+				entry(TABLE_CAT, TEXT),
+				entry(TABLE_SCHEM, TEXT),
+				entry(TABLE_NAME, TEXT),
+				entry(GRANTOR, TEXT),
+				entry(GRANTEE, TEXT),
+				entry(PRIVILEGE, TEXT),
+				entry(IS_GRANTABLE, TEXT)
+		),  rows);
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public ResultSet getBestRowIdentifier(String catalog, String schema, String table, int scope, boolean nullable)
-			throws SQLException {
-		return FireboltResultSet.empty();
+	public ResultSet getBestRowIdentifier(String catalog, String schema, String table, int scope, boolean nullable) throws SQLException {
+		return createEmptyResultSet(Stream.of(
+				entry(SCOPE, INTEGER), // short
+				entry(COLUMN_NAME, TEXT),
+				entry(DATA_TYPE, INTEGER),
+				entry(TYPE_NAME, TEXT),
+				entry(COLUMN_SIZE, INTEGER),
+				entry(BUFFER_LENGTH, INTEGER),
+				entry(DECIMAL_DIGITS, INTEGER), // short
+				entry(PSEUDO_COLUMN, INTEGER) // short
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
 	public ResultSet getVersionColumns(String catalog, String schema, String table) throws SQLException {
-		return FireboltResultSet.empty();
+		return createEmptyResultSet(Stream.of(
+				entry(SCOPE, INTEGER), // short
+				entry(COLUMN_NAME, TEXT),
+				entry(DATA_TYPE, INTEGER),
+				entry(TYPE_NAME, TEXT),
+				entry(COLUMN_SIZE, INTEGER),
+				entry(BUFFER_LENGTH, INTEGER),
+				entry(DECIMAL_DIGITS, INTEGER), // short
+				entry(PSEUDO_COLUMN, INTEGER) // short
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
 	public ResultSet getPrimaryKeys(String catalog, String schema, String table) throws SQLException {
-		return FireboltResultSet.empty();
+		return createEmptyResultSet(Stream.of(
+				entry(TABLE_CAT, TEXT),
+				entry(TABLE_SCHEM, TEXT),
+				entry(TABLE_NAME, TEXT),
+				entry(COLUMN_NAME, TEXT),
+				entry(KEY_SEQ, INTEGER), // short
+				entry(PK_NAME, TEXT)
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
 	public ResultSet getImportedKeys(String catalog, String schema, String table) throws SQLException {
-		return FireboltResultSet.empty();
+		return getKeys();
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
 	public ResultSet getExportedKeys(String catalog, String schema, String table) throws SQLException {
-		return FireboltResultSet.empty();
+		return getKeys();
 	}
-
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
 	public ResultSet getCrossReference(String parentCatalog, String parentSchema, String parentTable,
 			String foreignCatalog, String foreignSchema, String foreignTable) throws SQLException {
-		return FireboltResultSet.empty();
+		return getKeys();
+	}
+
+	private ResultSet getKeys() throws SQLException {
+		return createEmptyResultSet(Stream.of(
+				entry(PKTABLE_CAT, TEXT),
+				entry(PKTABLE_SCHEM, TEXT),
+				entry(PKTABLE_NAME, TEXT),
+				entry(PKCOLUMN_NAME, TEXT),
+				entry(FKTABLE_CAT, TEXT),
+				entry(FKTABLE_SCHEM, TEXT),
+				entry(FKTABLE_NAME, TEXT),
+				entry(FKCOLUMN_NAME, TEXT),
+				entry(KEY_SEQ, INTEGER), // short
+				entry(UPDATE_RULE, INTEGER), // short
+				entry(DELETE_RULE, INTEGER), // short
+				entry(FK_NAME, TEXT),
+				entry(PK_NAME, TEXT),
+				entry(DEFERRABILITY, INTEGER) // short
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public ResultSet getIndexInfo(String catalog, String schema, String table, boolean unique, boolean approximate)
-			throws SQLException {
-		return FireboltResultSet.empty();
+	public ResultSet getIndexInfo(String catalog, String schema, String table, boolean unique, boolean approximate) throws SQLException {
+		return createEmptyResultSet(Stream.of(
+				entry(TABLE_CAT, TEXT),
+				entry(TABLE_SCHEM, TEXT),
+				entry(TABLE_NAME, TEXT),
+				entry(NON_UNIQUE, BOOLEAN),
+				entry(INDEX_QUALIFIER, TEXT),
+				entry(INDEX_NAME, TEXT),
+				entry(TYPE, INTEGER), // short
+				entry(ORDINAL_POSITION, INTEGER), // short
+				entry(COLUMN_NAME, TEXT),
+				entry(ASC_OR_DESC, TEXT),
+				entry(CARDINALITY, BIG_INT), // long
+				entry(PAGES, BIG_INT), // long
+				entry(FILTER_CONDITION, INTEGER)
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
 	public ResultSet getClientInfoProperties() throws SQLException {
-		return FireboltResultSet.empty();
+		return createEmptyResultSet(Stream.of(
+				entry(NAME, TEXT),
+				entry(MAX_LEN, INTEGER),
+				entry(DEFAULT_VALUE, TEXT),
+				entry(DESCRIPTION, TEXT)
+		));
 	}
 
 	@Override
 	public ResultSet getFunctions(String catalog, String schemaPattern, String functionNamePattern) throws SQLException {
-		List<QueryResult.Column> columns = Arrays.asList(
-				QueryResult.Column.builder().name(FUNCTION_CAT).type(TEXT).build(),
-				QueryResult.Column.builder().name(FUNCTION_SCHEM).type(TEXT).build(),
-				QueryResult.Column.builder().name(FUNCTION_NAME).type(TEXT).build(),
-				QueryResult.Column.builder().name(REMARKS).type(TEXT).build(),
-				QueryResult.Column.builder().name(FUNCTION_TYPE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(SPECIFIC_NAME).type(TEXT).build());
-		Predicate<String> functionFilter = functionNamePattern == null ? f -> true : f -> containsIgnoreCase(f, functionNamePattern);
+		Predicate<String> functionFilter = functionNamePattern == null ? f -> true : compile(functionNamePattern, CASE_INSENSITIVE).asPredicate();
 
 		List<List<?>> rows = Arrays.stream(String.join(",", getStringFunctions(), getNumericFunctions(), getTimeDateFunctions(), getSystemFunctions()).split(","))
 				.map(String::trim) // instead of split("\\s*,\\s") blocked by Sonar according to its opinion "can lead denial of service" (?!)
@@ -1315,32 +1423,18 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 				.distinct() // some functions belong to different categories, e.g. TO_DATE is both date-time and string function
 				.map(function -> Arrays.asList(null, null, function, null, functionNoTable, function))
 				.collect(toList());
-		return FireboltResultSet.of(QueryResult.builder().columns(columns).rows(rows).build());
+		return createResultSet(Stream.of(
+				entry(FUNCTION_CAT, TEXT),
+				entry(FUNCTION_SCHEM, TEXT),
+				entry(FUNCTION_NAME, TEXT),
+				entry(REMARKS, TEXT),
+				entry(FUNCTION_TYPE, INTEGER),
+				entry(SPECIFIC_NAME, TEXT)), rows);
 	}
 
 	@Override
 	public ResultSet getFunctionColumns(String catalog, String schemaPattern, String functionNamePattern, String columnNamePattern) throws SQLException {
-
-		List<QueryResult.Column> columns = Arrays.asList(
-				QueryResult.Column.builder().name(FUNCTION_CAT).type(TEXT).build(),
-				QueryResult.Column.builder().name(FUNCTION_SCHEM).type(TEXT).build(),
-				QueryResult.Column.builder().name(FUNCTION_NAME).type(TEXT).build(),
-				QueryResult.Column.builder().name(COLUMN_NAME).type(TEXT).build(),
-				QueryResult.Column.builder().name(COLUMN_TYPE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(DATA_TYPE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(TYPE_NAME).type(TEXT).build(),
-				QueryResult.Column.builder().name(PRECISION).type(INTEGER).build(),
-				QueryResult.Column.builder().name(LENGTH).type(INTEGER).build(),
-				QueryResult.Column.builder().name(SCALE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(RADIX).type(INTEGER).build(),
-				QueryResult.Column.builder().name(NULLABLE).type(INTEGER).build(),
-				QueryResult.Column.builder().name(REMARKS).type(TEXT).build(),
-				QueryResult.Column.builder().name(CHAR_OCTET_LENGTH).type(INTEGER).build(),
-				QueryResult.Column.builder().name(ORDINAL_POSITION).type(INTEGER).build(),
-				QueryResult.Column.builder().name(IS_NULLABLE).type(TEXT).build(),
-				QueryResult.Column.builder().name(SPECIFIC_NAME).type(TEXT).build()
-		);
-		Predicate<String> functionFilter = functionNamePattern == null ? f -> true : f -> containsIgnoreCase(f, functionNamePattern);
+		Predicate<String> functionFilter = functionNamePattern == null ? f -> true : compile(functionNamePattern, CASE_INSENSITIVE).asPredicate();
 
 		List<List<?>> stringFunctions = Arrays.stream(String.join(",", getStringFunctions()).split(",")).map(String::trim).filter(functionFilter)
 				.map(function -> Arrays.asList(null, null, function, null, functionColumnUnknown, Types.VARCHAR, JDBCType.VARCHAR.getName(), null, null, null, null, functionNullable, null, null, null, "YES", function))
@@ -1375,18 +1469,56 @@ public class FireboltDatabaseMetadata implements DatabaseMetaData {
 		};
 		List<List<?>> allFunctions = Stream.of(stringFunctions, numericFunctions, timeDateFunctions, systemFunctions).flatMap(Collection::stream).sorted(comparator).collect(toList());
 
-		return FireboltResultSet.of(QueryResult.builder().columns(columns).rows(allFunctions).build());
+		return createResultSet(Stream.of(
+				entry(FUNCTION_CAT, TEXT),
+				entry(FUNCTION_SCHEM, TEXT),
+				entry(FUNCTION_NAME, TEXT),
+				entry(COLUMN_NAME, TEXT),
+				entry(COLUMN_TYPE, INTEGER),
+				entry(DATA_TYPE, INTEGER),
+				entry(TYPE_NAME, TEXT),
+				entry(PRECISION, INTEGER),
+				entry(LENGTH, INTEGER),
+				entry(SCALE, INTEGER),
+				entry(RADIX, INTEGER),
+				entry(NULLABLE, INTEGER),
+				entry(REMARKS, TEXT),
+				entry(CHAR_OCTET_LENGTH, INTEGER),
+				entry(ORDINAL_POSITION, INTEGER),
+				entry(IS_NULLABLE, TEXT),
+				entry(SPECIFIC_NAME, TEXT)), allFunctions);
 	}
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	@NotImplemented
-	public ResultSet getPseudoColumns(String catalog, String schemaPattern, String tableNamePattern, String columnNamePattern) {
-		return FireboltResultSet.empty();
+	public ResultSet getPseudoColumns(String catalog, String schemaPattern, String tableNamePattern, String columnNamePattern) throws SQLException {
+		return createEmptyResultSet(Stream.of(
+				entry(TABLE_CAT, TEXT),
+				entry(TABLE_SCHEM, TEXT),
+				entry(TABLE_NAME, TEXT),
+				entry(COLUMN_NAME, TEXT),
+				entry(DATA_TYPE, INTEGER),
+				entry(COLUMN_SIZE, INTEGER),
+				entry(DECIMAL_DIGITS, INTEGER),
+				entry(NUM_PREC_RADIX, INTEGER),
+				entry(COLUMN_USAGE, TEXT),
+				entry(REMARKS, TEXT),
+				entry(CHAR_OCTET_LENGTH, INTEGER),
+				entry(IS_NULLABLE, TEXT)
+		));
 	}
 
 	@Override
-	@ExcludeFromJacocoGeneratedReport
-	public boolean generatedKeyAlwaysReturned() throws SQLException {
+	public boolean generatedKeyAlwaysReturned() {
 		return false;
+	}
+
+	private ResultSet createEmptyResultSet(Stream<Map.Entry<String, FireboltDataType>> columns) throws SQLException {
+		return createResultSet(columns, List.of());
+	}
+
+	private ResultSet createResultSet(Stream<Map.Entry<String, FireboltDataType>> columns, List<List<?>> rows) throws SQLException {
+		return FireboltResultSet.of(QueryResult.builder()
+				.columns(columns.map(e -> QueryResult.Column.builder().name(e.getKey()).type(e.getValue()).build()).collect(toList()))
+				.rows(rows)
+				.build());
 	}
 }
